--- a/Project_Notes_004.ipynb
+++ b/Project_Notes_004.ipynb
@@ -21,12 +21,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To supress warnings\n",
+    "# To supress warnings.\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
     "\n",
-    "# Import reqired libraries\n",
+    "# Import reqired libraries.\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define data path\n",
+    "# Define data path.\n",
     "path = 'data/Project_Notes_004_'"
    ]
   },
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the 5 raw .arff files \n",
+    "# Load the 5 raw .arff files.\n",
     "N=5\n",
     "arff_list = [arff.loadarff(path + str(i+1) + 'year.arff') for i in range(N)]\n",
     "\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the column headers from X1 to X64 and the class label as Y\n",
+    "# Set the column headers from X1 to X64 and the class label as Y.\n",
     "cols = ['X' + str(i+1) for i in range(len(df.columns)-1)]\n",
     "cols.append('Y')\n",
     "df.columns = cols"
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Check column names\n",
+    "# Check column names.\n",
     "df.columns"
    ]
   },
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert target values to integer type \n",
+    "# Convert target values to integer type.\n",
     "Y_values = {b'0': 0,\n",
     "            b'1': 1}\n",
     "\n",
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "# Preview df\n",
+    "# Preview df.\n",
     "df.head()"
    ]
   },
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "# Check df shape\n",
+    "# Check df shape.\n",
     "df.shape"
    ]
   },
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "# Check df data types\n",
+    "# Check df data types.\n",
     "df.info()"
    ]
   },
@@ -464,7 +464,7 @@
     }
    ],
    "source": [
-    "# Generate sparsity matrix for df\n",
+    "# Generate sparsity matrix for df.\n",
     "def sparsity_matrix(dataframe):\n",
     "    missing_df = dataframe.columns[dataframe.isnull().any()].tolist()\n",
     "    msno.matrix(dataframe[missing_df], figsize=(40,10))\n",
@@ -500,7 +500,7 @@
     }
    ],
    "source": [
-    "# Check df for missing values\n",
+    "# Check df for missing values.\n",
     "df.isna().sum()"
    ]
   },
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to enumerate missing values\n",
+    "# Function to enumerate missing values.\n",
     "def missing_values(df):\n",
     "    print('col_name' + '\\t' + 'miss_val' + '\\t' + 'per_miss')\n",
     "    miss_col = []\n",
@@ -608,7 +608,7 @@
     }
    ],
    "source": [
-    "# Check df for missing values\n",
+    "# Check df for missing values.\n",
     "missing_values(df)"
    ]
   },
@@ -629,7 +629,7 @@
     }
    ],
    "source": [
-    "# Drop colummes with more than 40% missing values and check shape\n",
+    "# Drop colummes with more than 40% missing values and check shape.\n",
     "df.drop(['X37'], axis=1, inplace=True)\n",
     "df.shape"
    ]
@@ -640,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Subset numerical features\n",
+    "# Subset numerical features.\n",
     "df_num = df.select_dtypes(\"number\")"
    ]
   },
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "# Create correlation matrix\n",
+    "# Create correlation matrix.\n",
     "corr_matrix = df_num.corr().abs().round(2)\n",
     "\n",
     "# Select upper triangle of correlation matrix\n",
@@ -722,7 +722,7 @@
     }
    ],
    "source": [
-    "# Find features with correlation greater than 0.8\n",
+    "# Find features with correlation greater than 0.8.\n",
     "to_drop = [column for column in upper.columns if any(upper[column] > 0.8)]\n",
     "to_drop"
    ]
@@ -744,7 +744,7 @@
     }
    ],
    "source": [
-    "# Drop the features \n",
+    "# Drop the features.\n",
     "df.drop(to_drop, axis=1, inplace=True)\n",
     "df.shape"
    ]
@@ -755,7 +755,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Subset numerical features again\n",
+    "# Subset numerical features again.\n",
     "df_num = df.select_dtypes(\"number\")"
    ]
   },
@@ -1358,7 +1358,7 @@
     }
    ],
    "source": [
-    "# Draw boxplot of df\n",
+    "# Draw boxplot of df.\n",
     "for col in df_num.columns:\n",
     "    sns.boxplot(data=df[col], orient=\"h\")\n",
     "    plt.title('Graph of column {}'.format(col))\n",
@@ -1371,7 +1371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to replace ouliers using iqr\n",
+    "# Function to replace ouliers using iqr.\n",
     "def outlier_iqr(dataframe):\n",
     "    for col in dataframe.columns:\n",
     "        quartile1 = dataframe[col].quantile(0.25)\n",
@@ -1399,7 +1399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the iqr outlier function\n",
+    "# Use the iqr outlier function.\n",
     "df = outlier_iqr(df_num)"
    ]
   },
@@ -1758,7 +1758,7 @@
     }
    ],
    "source": [
-    "# View the new df\n",
+    "# View the new df.\n",
     "df"
    ]
   },
@@ -2049,7 +2049,7 @@
     }
    ],
    "source": [
-    "# Get df statistics again\n",
+    "# Get df statistics again.\n",
     "df_stat = df_num.describe()\n",
     "df_stat"
    ]
@@ -2071,7 +2071,7 @@
     }
    ],
    "source": [
-    "# Plot class balance\n",
+    "# Plot class balance.\n",
     "df[\"Y\"].value_counts(normalize=True).plot(kind=\"bar\",\n",
     "                                          xlabel=\"bankrupt\",\n",
     "                                          ylabel=\"Frequency\",\n",
@@ -2095,12 +2095,12 @@
     }
    ],
    "source": [
-    "# Create data for computation\n",
+    "# Create data for computation.\n",
     "target = \"Y\"\n",
     "X = df.drop(columns=target)\n",
     "y = df[target]\n",
     "\n",
-    "# Print data spaes\n",
+    "# Print data shapes.\n",
     "print(\"X shape:\", X.shape)\n",
     "print(\"y shape:\", y.shape)"
    ]
@@ -2122,7 +2122,7 @@
     }
    ],
    "source": [
-    "# Divide dataset into training and test sets using randomized split\n",
+    "# Divide dataset into training and test sets using randomized split.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(\"X_train shape:\", X_train.shape)\n",
@@ -2337,7 +2337,7 @@
     }
    ],
    "source": [
-    "# Create X_train_over and y_train_over by performing random over-sampling\n",
+    "# Create X_train_over and y_train_over by performing random over-sampling.\n",
     "over_sampler = RandomOverSampler()\n",
     "X_train_over, y_train_over = over_sampler.fit_resample(X_train, y_train)\n",
     "print(\"X_train_over shape:\", X_train_over.shape)\n",
@@ -2425,9 +2425,8 @@
     }
    ],
    "source": [
-    "# Create classifier clf to train X_train_over and y_train_over\n",
+    "# Create classifier clf to train X_train_over and y_train_over.\n",
     "clf = make_pipeline(SimpleImputer(), StandardScaler(), XGBClassifier())\n",
-    "\n",
     "clf"
    ]
   },
@@ -2461,7 +2460,7 @@
     }
    ],
    "source": [
-    "# Check the steps\n",
+    "# Check the steps.\n",
     "clf.steps"
    ]
   },
@@ -2479,7 +2478,7 @@
     }
    ],
    "source": [
-    "# Perform cross-validation with your classifier using the over-sampled training data\n",
+    "# Perform cross-validation with your classifier using the over-sampled training data.\n",
     "cv_scores = cross_val_score(clf, X_train_over, y_train_over)\n",
     "print(cv_scores)"
    ]
@@ -2503,10 +2502,10 @@
     }
    ],
    "source": [
+    "# Define the parameters.\n",
     "params = {\"simpleimputer__strategy\": [\"mean\", \"median\"],\n",
     "          \"xgbclassifier__n_estimators\": range(20, 31, 5),\n",
     "          \"xgbclassifier__max_depth\": range(2, 5)}\n",
-    "\n",
     "params"
    ]
   },
@@ -2644,13 +2643,12 @@
     }
    ],
    "source": [
-    "# Create a GridSearchCV that includes classifier and hyperparameter grid\n",
+    "# Create a GridSearchCV that includes classifier and hyperparameter grid.\n",
     "model = GridSearchCV(clf,\n",
     "                     param_grid=params,\n",
     "                     cv=5,\n",
     "                     n_jobs=-1,\n",
     "                     verbose=1)\n",
-    "\n",
     "model"
    ]
   },
@@ -2795,7 +2793,7 @@
     }
    ],
    "source": [
-    "# Fit X_train_over and y_train_over to the GridSearchCV\n",
+    "# Fit X_train_over and y_train_over to the GridSearchCV.\n",
     "model.fit(X_train_over, y_train_over)"
    ]
   },
@@ -3012,6 +3010,7 @@
     }
    ],
    "source": [
+    "# Create a dataframe from the results.\n",
     "cv_results = pd.DataFrame(model.cv_results_).sort_values(\"rank_test_score\")\n",
     "cv_results[\"param_max_depth\"] = cv_results[\"param_xgbclassifier__max_depth\"]\n",
     "cv_results[\"param_n_estimators\"] = cv_results[\"param_xgbclassifier__n_estimators\"]\n",
@@ -3032,7 +3031,7 @@
     }
    ],
    "source": [
-    "# Extract the best hyperparameters from model\n",
+    "# Extract the best hyperparameters from model.\n",
     "best_params = model.best_params_\n",
     "print(best_params)"
    ]
@@ -3052,7 +3051,7 @@
     }
    ],
    "source": [
-    "# Compute train and test scores\n",
+    "# Compute train and test scores.\n",
     "acc_train = model.score(X_train_over, y_train_over)\n",
     "acc_test = model.score(X_test, y_test)\n",
     "\n",
@@ -3080,7 +3079,7 @@
     }
    ],
    "source": [
-    "# Count the values in test\n",
+    "# Count the values in test.\n",
     "y_test.value_counts()"
    ]
   },
@@ -3127,7 +3126,7 @@
     }
    ],
    "source": [
-    "# Generate a classification report for model's performance\n",
+    "# Generate a classification report for model's performance.\n",
     "class_report = classification_report(y_test, model.predict(X_test))\n",
     "print(class_report)"
    ]
@@ -3149,16 +3148,16 @@
     }
    ],
    "source": [
-    "# Get feature names from training data\n",
+    "# Get feature names from training data.\n",
     "features = X_train_over.columns\n",
     "\n",
-    "# Extract importances from model\n",
+    "# Extract importances from model.\n",
     "importances = model.best_estimator_.named_steps[\"xgbclassifier\"].feature_importances_\n",
     "\n",
-    "# Create a series with feature names and importances\n",
+    "# Create a series with feature names and importances.\n",
     "feat_imp = pd.Series(importances, index=features).sort_values()\n",
     "\n",
-    "# Plot 10 most important features\n",
+    "# Plot 10 most important features.\n",
     "feat_imp.tail(10).plot(kind=\"barh\", xlabel=\"Gini Importance\", ylabel=\"Feature\", title=\"Feature Importance\");"
    ]
   },
@@ -3528,7 +3527,7 @@
     }
    ],
    "source": [
-    "# Get X_test sample data from df\n",
+    "# Get X_test sample data from df.\n",
     "X_test_p = X_test.iloc[200:299]\n",
     "X_test_p"
    ]
@@ -3561,7 +3560,7 @@
     }
    ],
    "source": [
-    "# Get y_test sample data from df\n",
+    "# Get y_test sample data from df.\n",
     "y_test_p = y_test.iloc[200:299]\n",
     "y_test_p"
    ]
@@ -3580,7 +3579,7 @@
     }
    ],
    "source": [
-    "# load the model from disk\n",
+    "# load the model from disk.\n",
     "loaded_model = pickle.load(open(\"data/Project_Notes_004_model_xgb.pkl\", 'rb'))\n",
     "result = loaded_model.score(X_test_p, y_test_p).round(4)\n",
     "print(result)"
