--- a/Project_Notes_007.ipynb
+++ b/Project_Notes_007.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project_Notes_006"
+    "# Project_Notes_007"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## New York City Airbnb\n",
-    "In this project, a data with 102599 rows and 26 columns will be used to predict New York City Airbnb apartment prices. DecisionTreeRegressor and XGB will be applied and the algorithm with the lowest RMSE tuned so that the best hyperparameters are selected for the final model."
+    "## New York City Airbnb Reload\n",
+    "In Project_Notes_006, stable dlmc xgboost with dicvectorizer was used to buld a model for predicting New York City Airbnb apartment prices. In this project, the same data will be used but the model applied will be sklearn.ensemble.GradientBoostingRegressor, sklearn.compose.ColumnTransformer and sklearn.pipeline. The result will then be compared with that of Project_Notes_006."
    ]
   },
   {
@@ -45,8 +45,10 @@
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.tree import export_text\n",
-    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
