--- a/Project_Notes_006.ipynb
+++ b/Project_Notes_006.ipynb
@@ -2516,7 +2516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best eta is 0.3"
+    "The best eta = 0.3"
    ]
   },
   {
