--- a/Project_Notes_007.ipynb
+++ b/Project_Notes_007.ipynb
@@ -1389,6 +1389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define X and y.\n",
     "df_use = df.copy()\n",
     "y = df_use.price\n",
     "X = df_use.drop('price', axis=1)"
