--- a/Project_Notes_010.ipynb
+++ b/Project_Notes_010.ipynb
@@ -13,8 +13,8 @@
    "id": "a489226f-ad40-41a7-9ccb-8eb103f9b7fa",
    "metadata": {},
    "source": [
-    "## British Airways Customer Booking\r\n",
-    "In this project, a data with 5000 rows and 14 columns will be used to predict if a flight booking is completed. The data will be visualised using histogram, pairplot, heat map and boxplot for numerical columns, while the object columns will utilise bar plots with the target column as the hue. The duplicates and outliners will betreated with appropriate methodsd, the route column reclassified and the booking_origin column regrouped to continents. GridSearchCV will be applied to get the best parameters for final model creation to obtain f1 score, confusion matrix and feature importance. Finally, four methods will be used to treat the outliers to find out which will give the best f1_score.s\r\n"
+    "## British Airways Customer Booking\n",
+    "In this project, a data with 5000 rows and 14 columns will be used to predict if a flight booking is completed. The data will be visualised using histogram, pairplot, heat map and boxplot for numerical columns, while the object columns will utilise bar plots with the target column as the hue. The duplicates and outliners will be treated with appropriate methods, the route column reclassified and the booking_origin column regrouped to continents. GridSearchCV will be applied to get the best parameters for final model creation to obtain f1 score, confusion matrix and feature importance. Finally, four methods will be used to treat the outliers to find out which will give the best f1_score.\n"
    ]
   },
   {
