--- a/Project_Notes_010.ipynb
+++ b/Project_Notes_010.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "- `num_passengers` = number of passengers travelling\n",
     "- `sales_channel` = sales channel booking was made on\n",
-    "- `trip_type` = trip Type (Round Trip, One Way, Circle Trip)\n",
+    "- `trip_type` = trip type (Round Trip, One Way, Circle Trip)\n",
     "- `purchase_lead` = number of days between travel date and booking date\n",
     "- `length_of_stay` = number of days spent at destination\n",
     "- `flight_hour` = hour of flight departure\n",
