--- a/Project_Notes_010.ipynb
+++ b/Project_Notes_010.ipynb
@@ -40,7 +40,7 @@
     "from category_encoders import OrdinalEncoder\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import f1_score, precision_score, roc_auc_score, confusion_matrix\n",
+    "from sklearn.metrics import f1_score, confusion_matrix\n",
     "\n",
     "%matplotlib inline"
    ]
