--- a/Project_Notes_011.ipynb
+++ b/Project_Notes_011.ipynb
@@ -335,15 +335,15 @@
    "source": [
     "# Define a dictionary to rename some columns.\n",
     "col_dict = {\n",
-    "            'Delivery_ID': 'id', \n",
-    "            'Delivery_Start_Date': 'date', \n",
-    "            'Delivery_Start_Time': 'time', \n",
-    "            'Traffic_Conditions': 'traffic', \n",
-    "            'Number_of_Packages': 'packages',  \n",
-    "            'Customer_Preference_for_Delivery_Time': 'preference', \n",
-    "            'Distance_(miles)': 'distance', \n",
-    "            'Historical_Delivery_Time_(hours)': 'delivery'\n",
-    "           }"
+    "    'Delivery_ID': 'id', \n",
+    "    'Delivery_Start_Date': 'date', \n",
+    "    'Delivery_Start_Time': 'time', \n",
+    "    'Traffic_Conditions': 'traffic', \n",
+    "    'Number_of_Packages': 'packages',  \n",
+    "    'Customer_Preference_for_Delivery_Time': 'preference', \n",
+    "    'Distance_(miles)': 'distance', \n",
+    "    'Historical_Delivery_Time_(hours)': 'delivery'\n",
+    "}"
    ]
   },
   {
@@ -3054,10 +3054,13 @@
    ],
    "source": [
     "# Get final RandomForestRegressor model.\n",
-    "final_rf = RandomForestRegressor(n_estimators=n_estimators,\n",
-    "                                 max_depth=max_depth, \n",
-    "                                 min_samples_leaf= min_samples_leaf, \n",
-    "                                 min_samples_split=min_samples_split)\n",
+    "final_rf = RandomForestRegressor(\n",
+    "    n_estimators=n_estimators,\n",
+    "    max_depth=max_depth, \n",
+    "    min_samples_leaf= min_samples_leaf, \n",
+    "    min_samples_split=min_samples_split\n",
+    ")\n",
+    "\n",
     "final_rf.fit(X_train, y_train)"
    ]
   },
@@ -3111,9 +3114,12 @@
    ],
    "source": [
     "# Get final GradientBoostingRegressor model.\n",
-    "final_gb = GradientBoostingRegressor(learning_rate=learning_rate, \n",
-    "                                     max_depth=max_depth, \n",
-    "                                     n_estimators=n_estimators)\n",
+    "final_gb = GradientBoostingRegressor(\n",
+    "    learning_rate=learning_rate, \n",
+    "    max_depth=max_depth, \n",
+    "    n_estimators=n_estimators\n",
+    ")\n",
+    "\n",
     "final_gb.fit(X_train, y_train)"
    ]
   },
@@ -3166,8 +3172,7 @@
    ],
    "source": [
     "# Get final KNeighborsRegressor model.\n",
-    "final_knn = KNeighborsRegressor(n_neighbors=n_neighbors, \n",
-    "                                weights=weights)\n",
+    "final_knn = KNeighborsRegressor(n_neighbors=n_neighbors, weights=weights)\n",
     "final_knn.fit(X_train, y_train)"
    ]
   },
@@ -4225,18 +4230,18 @@
     "xgb = make_pipeline(preprocessor, XGBRegressor())\n",
     "\n",
     "params = {\n",
-    "            'xgbregressor__eta': [0.1, 0.2, 0.3, 0.5, 0.6],\n",
-    "            'xgbregressor__max_depth': [3, 4, 5, 7, 10],\n",
-    "            'xgbregressor__min_child_weight': [20, 30, 40, 50, 60]\n",
-    "         }\n",
+    "   'xgbregressor__eta': [0.1, 0.2, 0.3, 0.5, 0.6],\n",
+    "   'xgbregressor__max_depth': [3, 4, 5, 7, 10],\n",
+    "   'xgbregressor__min_child_weight': [20, 30, 40, 50, 60]\n",
+    "}\n",
     "\n",
     "gscv = RandomizedSearchCV(\n",
-    "                    estimator=xgb,\n",
-    "                    param_distributions=params,\n",
-    "                    n_iter=50,\n",
-    "                    cv=5,\n",
-    "                    n_jobs=-1\n",
-    "                    )\n",
+    "   estimator=xgb,\n",
+    "   param_distributions=params,\n",
+    "   n_iter=50,\n",
+    "   cv=5,\n",
+    "   n_jobs=-1\n",
+    ")\n",
     "\n",
     "gscv.fit(X_train, y_train)"
    ]
@@ -4438,17 +4443,17 @@
     "xgb = make_pipeline(preprocessor, XGBRegressor())\n",
     "\n",
     "params = {\n",
-    "            'xgbregressor__eta': [0.1, 0.2, 0.3],\n",
-    "            'xgbregressor__max_depth': [2, 3, 4],\n",
-    "            'xgbregressor__min_child_weight': [20, 30, 40]\n",
-    "         }\n",
+    "   'xgbregressor__eta': [0.1, 0.2, 0.3],\n",
+    "   'xgbregressor__max_depth': [2, 3, 4],\n",
+    "   'xgbregressor__min_child_weight': [20, 30, 40]\n",
+    "}\n",
     "\n",
     "gscv = GridSearchCV(\n",
-    "                    estimator=xgb,\n",
-    "                    param_grid=params,\n",
-    "                    cv=5,\n",
-    "                    n_jobs=-1\n",
-    "                    )\n",
+    "   estimator=xgb,\n",
+    "   param_grid=params,\n",
+    "   cv=5,\n",
+    "   n_jobs=-1\n",
+    ")\n",
     "\n",
     "gscv.fit(X_train, y_train)"
    ]
@@ -4636,7 +4641,11 @@
    ],
    "source": [
     "# Train with full_train.\n",
-    "xgb_final = make_pipeline(preprocessor, XGBRegressor(eta=eta, max_depth=max_depth, min_child_weight=min_child_weight))\n",
+    "xgb_final = make_pipeline(preprocessor, \n",
+    "                          XGBRegressor(eta=eta, \n",
+    "                                       max_depth=max_depth, \n",
+    "                                       min_child_weight=min_child_weight))\n",
+    "\n",
     "xgb_final.fit(X_full_train, y_full_train)"
    ]
   },
